test_data/Json/Unexpected/Unserializable/InvalidModelType/ConceptDescription/wrong.json.exception
Expected the model type 'ConceptDescription', but got soReallyUtterlyInvalid at: modelType